@@ -79,6 +79,9 @@
 	* libfreeipmi/api/ipmi-lan-session-common.c
 	(_ipmi_check_ipmb_out_of_order): Remove unused variable
 
+	* libfreeipmi/sel/ipmi-sel-string-supermicro-common.h: Add missing
+	functions.
+
 2019-11-27 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/sdr/ipmi-sdr-parse-util.c
